apps/monitorizacion/vmagent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmagent
  namespace: monitorizacion
spec:
  selector:
    matchLabels:
      app: vmagent
  template:
    metadata:
      labels:
        app: vmagent
    spec:
      serviceAccountName: vmagent-sa
      containers:
      - name: vmagent
        image: victoriametrics/vmagent
        args:
          - "--remoteWrite.url=http://victoriametrics-victoria-metrics-single-server.monitorizacion.svc.cluster.local:8428/api/v1/write"
          - "-promscrape.config.strictParse=false"
        volumeMounts:
          - name: config-volume
            mountPath: /etc/vmagent/
      volumes:
        - name: config-volume
          configMap:
            name: victoriametrics-config
