apps/monitorizacion/loki-stack.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitorizacion
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitorizacion
spec:
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      securityContext:
        fsGroup: 10001 
      containers:
        - name: loki
          image: grafana/loki:2.9.0
          args: ["-config.file=/etc/loki/config.yaml"]
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: /tmp/loki
      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: storage
          emptyDir: {}
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitorizacion
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:2.9.0
          args:
            - -config.file=/etc/promtail/config.yaml
          volumeMounts:
            - name: logs
              mountPath: /var/log/pods
              readOnly: true
            - name: config
              mountPath: /etc/promtail
      volumes:
        - name: logs
          hostPath:
            path: /var/log/pods
        - name: config
          configMap:
            name: promtail-config
        - name: positions
          emptyDir: {}
