apps/monitorizacion/victoria-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics-bridge
  namespace: monitorizacion
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8428
    targetPort: 8428
    protocol: TCP
  selector:
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-single
