apps/monitorizacion/victoria.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics-bridge
  namespace: monitorizacion
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8428
    targetPort: 8428
